--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.20",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node src/server.js"
   },
